--- a/RMW/Views/Home/Resume.cshtml
+++ b/RMW/Views/Home/Resume.cshtml
@@ -93,7 +93,7 @@
 
 <div class="clear"></div>
 <p>
-    <b>Recent Relevant Experience</b>
+    <b>Recent Experience</b>
 
 </p>
 
@@ -130,7 +130,7 @@
         <ul>
             <li><i>Web Developer, Webmaster</i></li>
             <li class="uppers">San Francisco, California <span class="notice">;</span> August 2011 - Present</li>
-            <li class="details">Independently built an open sourced YouTube community video project available on <a href="http://dasklub.codeplex.com/" target="_blank">Code Plex</a>.
+            <li class="details">Independently built an open sourced YouTube community video project available on <a href="http://github.com/dasklub" target="_blank">GitHub</a>.
                The current live instance is a 
                  responsive design social networking site for the industrial music
                  industry using ASP.NET 4.5 MVC 4/ SQL Server 2012. Developed features include: Membership, Status Updates, 
