--- a/RMW/Views/Home/Contact.cshtml
+++ b/RMW/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
         <h3>Phone</h3>
     </header>
     <p>
-        <span class="label">Google Voide:</span>
+        <span class="label">Google Voice:</span>
         <span>(313) 451-0386</span>
     </p>
     
