--- a/RMW/Views/Shared/_Layout.cshtml
+++ b/RMW/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     @System.Web.Optimization.Styles.Render("~/Content/css/css_head1")
 
     @System.Web.Optimization.Scripts.Render( "~/bundles/js_head1")
+    <!-- last will -->
 </head>
 <body>
     <!--[if lt IE 7]>
