contact/ resume update

--- a/RMW/Views/Home/Contact.cshtml
+++ b/RMW/Views/Home/Contact.cshtml
@@ -2,24 +2,14 @@
     ViewBag.Title = "Contact";
 }
  <h1>Contact</h1>
-<section class="contact">
-    <header>
-        <h3>Phone</h3>
-    </header>
-    <p>
-        <span class="label">Google Voice:</span>
-        <span>(313) 451-0386</span>
-    </p>
-    
-</section>
-
+ 
 <section class="contact">
     <header>
         <h3>Email</h3>
     </header>
 
   
-        <p>
+    <p>
         <span class="label">Business:</span>
         <span><a href="mailto:admin@bootbaron.com">admin&#64;<wbr>bootbaron<wbr>.com</a></span>
     
@@ -31,14 +21,32 @@
         <span class="label">Personal:</span>
         <span><a href="mailto:ryanmichaelwilliams@gmail.com">ryanmichaelwilliams&#64;<wbr>gmail<wbr>.com</a></span>
     
-      </p>
+    </p>
 
     
 </section>
 
 <section class="contact">
+ <ul class="sub_nodeless">
+     <li>
+    <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">
+       <img src="~/Content/img/logos/gplus-64.png" /> </a>
+          <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">Ryan Williams</a>
+     </li>
+
+     <li>
+            <a class="h_img" href="http://www.linkedin.com/in/ryanmichaelwilliams" target="_blank">
+       <img src="~/Content/img/logos/li.png" /></a>
+         
+     </li>
+
+ </ul>
+        
+</section>
+
+<section class="contact">
     <header>
-        <h3>Address</h3>
+        <h3>Business Address</h3>
     </header>
     <address>Ryan Williams<br />
         1592 Union Street #208<br />
