--- a/RMW/Views/Home/Resume.cshtml
+++ b/RMW/Views/Home/Resume.cshtml
@@ -99,15 +99,15 @@
 
 <ul class="sub_nodeless">
         <li class="main_node">
-        <a href="http://linkshare.com" target="_blank">Rakuten LinkShare</a>
+        <a href="http://linkshare.com" target="_blank">Rakuten</a>
 
         <ul>
             <li><i>Software Engineer</i></li>
             <li class="uppers">Downtown San Francisco<span class="notice"> ; </span>January 2013 - Present</li>
             <li class="details">
-                Working with Windows Azure, Jenkins, TDD, PowerShell, Git, C# and SQL to create cloud based advertising solutions. 
-                Modifying deployment scripts and utilizing PowerShell commands to perform releases of C# code and interact with storage. 
-                Working with lower level HTTP for requests and responses.  Building reporting for application performance. 
+                Working with Windows Azure, PowerShell, C# and SQL Server to deliver applications for international E-Commerce. 
+                Developing TDD (Test Driven Development) solutions using Scrum and other Agile methodologies with continous deployment. 
+                
 
             </li>
 
