--- a/RMW/Views/Home/Resume.cshtml
+++ b/RMW/Views/Home/Resume.cshtml
@@ -99,7 +99,7 @@
 
 <ul class="sub_nodeless">
         <li class="main_node">
-        <a href="http://linkshare.com" target="_blank">Rakuten</a>
+        <a href="http://rakuten.com" target="_blank">Rakuten</a>
 
         <ul>
             <li><i>Software Engineer</i></li>
