--- a/RMW/Views/Shared/_Layout.cshtml
+++ b/RMW/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
             <aside>
                 <div class="side_bg">
          
-                <h2 style="color: #000; text-decoration: none;text-shadow: 1px 1px #fff;">Ryan Michael Williams</h2>
+                    <h2 style="color: #ffffff; text-decoration: none;text-shadow: 1px 1px #696969;">Ryan Michael Williams</h2>
                    <a href="~/home/about" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
                 <p><b>Full Stack Web Developer</b></p>
                 <ul>
@@ -115,8 +115,8 @@
 
    <hr />
                     
-                     <p><b>Open Sourced</b></p> 
-           <a   target="_blank" href="https://github.com/ryanmw/home">http://github.com/ryanmw</a>   
+                     <p><b>Open Source Work</b></p> 
+           <a   target="_blank" href="https://github.com/ryanmw">http://github.com/ryanmw</a>   
         
     </div>
     </aside>
