--- a/RMW/Views/Articles/Index.cshtml
+++ b/RMW/Views/Articles/Index.cshtml
@@ -2,7 +2,7 @@
     @model  PagedResult<Article>
 
 @{
-    ViewBag.Title = "Articles";
+    ViewBag.Title = "ASP.NET Web Developer Articles";
 }
 
 <h1>Articles</h1>
