--- a/RMW/Views/Shared/_Layout.cshtml
+++ b/RMW/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="google-site-verification" content="7BYPNC1VNRmI40PVCvMt8GLJCSHgXBnfjYErBzLWwnc" />
-    <title>RMW: @ViewBag.Title</title>
+    <title>RMW | @ViewBag.Title</title>
     <meta name="description" content="@ViewBag.MetaDesc">
     <meta name="viewport" content="width=device-width">
      <link rel="icon" href="~/content/img/favicon.ico" type='image/x-icon' />
