--- a/RMW/Views/Articles/Index.cshtml
+++ b/RMW/Views/Articles/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "ASP.NET Web Developer Articles";
+    ViewBag.MetaDesc = "Ryan Michael Williams, professional software developer. Articles on development with ASP.NET, C# and other useful Microsoft technologies.";
 }
 
 <h1>Articles</h1>
