--- a/RMW/Views/Home/Resume.cshtml
+++ b/RMW/Views/Home/Resume.cshtml
@@ -4,15 +4,15 @@
 }
 
 <h1>Résumé</h1>
-
+@*
 <img src="~/Content/img/logos/pdf.png" alt="pdf" />
-<a href="~/content/docs/rmw_resume_2013-08-05.pdf" target="_blank">Download PDF Version</a>
+<a href="~/content/docs/rmw_resume_2013-08-05.pdf" target="_blank">Download PDF Version</a>*@
 
 <hr />
 <h2>Ryan Michael Williams</h2>
 <i>Full Stack Web Developer</i>
 <p>
-    I have been making websites professionally since 2007. I'm currently interested in developing responsive designs through an MVC architecture with 
+    I have been making websites professionally for @(DateTime.UtcNow.Year - 2008)  years. I'm currently interested in developing responsive designs through an MVC architecture with 
     continuous deployment, embracing
     the latest innovations with HTML5, CSS3 and releated technologies. I enjoy working with a motivated team and also independently. 
 </p>
@@ -143,28 +143,6 @@
 
 
 
-
-    <li class="main_node"><a target="_blank" href="http://dasklub.com/">Das Klub</a>
-        <ul>
-            <li><i>Web Developer, Webmaster</i></li>
-            <li class="uppers">San Francisco, California <span class="notice">;</span> August 2011 - Present</li>
-            <li class="details">Independently built an open sourced YouTube community video project available on <a href="http://github.com/dasklub" target="_blank">GitHub</a>.
-               The current live instance is a 
-                 responsive design social networking site for the industrial music
-                 industry using ASP.NET 4.5 MVC 4/ SQL Server 2012. Developed features include: Membership, Status Updates, 
-                User Filtering, Ajax Messaging, SignalR Chatroom, Twitter Bootstrap Layout, jQuery, jQuery UI, 
-                Google Maps, YouTube HTML5 API, Amazon S3 Video Hosting, Localization in more than 12 Languages with browser
-                 detection and a large array of smaller features and detail. Built a marketing campaign through viral YouTube videos,
-                 Facebook and Google advertising. The site is an international music and dance community and can be used for any video based community.
-
-            </li>
-        </ul>
-
-    </li>
-
-
-
-
     <li class="main_node"><a target="_blank" href="http://www.jarmedia.com/">JAR Media</a>
         <ul>
             <li><i>Software Engineer</i></li>
@@ -183,25 +161,6 @@
 
 
 
-
-
-
-
-
-
-    <li class="main_node"><a target="_blank" href="http://www.powerprofiles.com/profile/00005141843140/JOCKS+QUARTERS,+LLC-ORLANDO-FL">Jocks Quarters</a>
-        <ul>
-            <li><i>Web Developer</i></li>
-            <li class="uppers">Orlando, Florida <span class="notice">;</span>  February 2009 - June 2009</li>
-            <li class="details">Lead developer for an ASP.NET C# Web Application utilizing Web Forms for the sports industry. Involved in database
-design, SQL Stored Procedures, OOP Design, user interface and control code using Telerik, class
-libraries, and HTML/ CSS. Created account management section, user profiles, registration system and
-search engine.
-
-            </li>
-        </ul>
-
-    </li>
 
 
 
@@ -241,31 +200,7 @@ wide Active Directory with SharePoint.
 
 
 
-    <li class="main_node"><a target="_blank" href="http://findlocal.orlandosentinel.com/listings/legends-investments-group-inc-casselberry">Legends Investment Group</a>
-        <ul>
-            <li><i>Web Developer Intern</i></li>
-            <li class="uppers">Casselberry, FL <span class="notice">;</span>  December 2007 – March 2008</li>
-            <li class="details">Worked with a small team of developers and designers to create a small business website system. Small businesses 
-                paid through their phone bill to have a website that showed their location and operating hours. The site also allowed the 
-                business to change their info. Coded in Visual Basic with ASP.NET 2.0.
-            </li>
-        </ul>
-
-    </li>
-
-
-
-
-
-    <li class="main_node"><a target="_blank" href="http://www.aptitudesolutions.com/index.html">Aptitude Solutions</a>
-        <ul>
-            <li><i>Web Developer Intern</i></li>
-            <li class="uppers">Orlando, FL <span class="notice">;</span>  September 2007 – Novemer 2007</li>
-            <li class="details">Assisted in redeveloping the company website with SubSonic CMS. Made modifications to the website with Visual Basic, HTML and CSS.
-            </li>
-        </ul>
-
-    </li>
+ 
 
 
 
