--- a/RMW/Views/Shared/_Layout.cshtml
+++ b/RMW/Views/Shared/_Layout.cshtml
@@ -96,9 +96,10 @@
             <aside>
                 <div class="side_bg">
          
-                    <h2 style="color: #ffffff; text-decoration: none;text-shadow: 1px 1px #696969;">Ryan Michael Williams</h2>
-                   <a href="~/home/about" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
-                <p><b>Full Stack Web Developer</b></p>
+                    <h2 class="home_title">Ryan Michael Williams</h2>
+                       <p class="no_margin"><b>Full Stack Web Developer</b></p>
+                   <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
+             
                 <ul>
                     <li>ASP.NET MVC</li>
                     <li>C#, VB.NET</li>
