--- a/RMW/Views/Shared/_Layout.cshtml
+++ b/RMW/Views/Shared/_Layout.cshtml
@@ -97,31 +97,45 @@
                 <div class="side_bg">
          
                     <h2 class="home_title">Ryan Michael Williams</h2>
-                       <p class="no_margin"><b>Full Stack Web Developer</b></p>
-                   <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
+                    <p class="no_margin"><b>Full Stack Web Developer</b></p>
+                    <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
              
-                <ul>
-                    <li>ASP.NET MVC</li>
-                    <li>C#, VB.NET</li>
-                    <li>SQL Server</li>
-                    <li>HTML5, CSS, JavaScript</li>
+                    <ul>
+                        <li>ASP.NET MVC</li>
+                        <li>C#, VB.NET</li>
+                        <li>SQL Server</li>
+                        <li>HTML5, CSS, JavaScript</li>
 
       
-                </ul>
+                    </ul>
   
-             <hr />
-                <p><b>Location</b></p>
-                San Francisco, California  
-                 <img src="~/Content/img/US_small.png" />
+                    <hr />
+                    <p><b>Location</b></p>
+                    San Francisco, California  
+                    <img src="~/Content/img/US_small.png" />
 
-   <hr />
+                    <hr />
                     
-                     <p><b>Open Source Work</b></p> 
-           <a   target="_blank" href="https://github.com/ryanmw">http://github.com/ryanmw</a>   
+                    <p><b>Open Source Work</b></p> 
+                    <a   target="_blank" href="https://github.com/ryanmw">http://github.com/ryanmw</a>   
         
-    </div>
-    </aside>
-           
+                </div>
+            </aside>
+            
+            <aside style="margin-top:20px;">
+                <h4>Advertisement</h4>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- RMW : 250x250 -->
+                <ins class="adsbygoogle"
+                     style="display:inline-block;width:250px;height:250px"
+                     data-ad-client="ca-pub-5003120351442332"
+                     data-ad-slot="9258534590"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+                
+               
+            </aside>
         </div>
         <!-- #main -->
     </div>
