--- a/RMW/Views/Home/Contact.cshtml
+++ b/RMW/Views/Home/Contact.cshtml
@@ -9,16 +9,9 @@
     </header>
 
   
-    <p>
-        <span class="label">Business:</span>
-        <span><a href="mailto:admin@bootbaron.com">admin&#64;<wbr>bootbaron<wbr>.com</a></span>
-    
-    </p>
-
-        
 
     <p>
-        <span class="label">Personal:</span>
+        <span class="label">E-Mail:</span>
         <span><a href="mailto:ryanmichaelwilliams@gmail.com">ryanmichaelwilliams&#64;<wbr>gmail<wbr>.com</a></span>
     
     </p>
