contact titles update

--- a/RMW/Views/Home/Contact.cshtml
+++ b/RMW/Views/Home/Contact.cshtml
@@ -11,32 +11,36 @@
   
 
     <p>
-        <span class="label">E-Mail:</span>
+       
         <span><a href="mailto:ryanmichaelwilliams@gmail.com">ryanmichaelwilliams&#64;<wbr>gmail<wbr>.com</a></span>
     
     </p>
 
     
 </section>
-
+<hr />
 <section class="contact">
- <ul class="sub_nodeless">
-     <li>
-    <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">
-       <img src="~/Content/img/logos/gplus-64.png" /> </a>
-          <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">Ryan Williams</a>
-     </li>
+        <header>
+        <h3>Social/ Business Profiles</h3>
+    </header>
 
-     <li>
+    <ul class="sub_nodeless">
+        <li>
+            <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">
+                <img src="~/Content/img/logos/gplus-64.png" /> </a>
+            <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">Ryan Williams</a>
+        </li>
+
+        <li>
             <a class="h_img" href="http://www.linkedin.com/in/ryanmichaelwilliams" target="_blank">
-       <img src="~/Content/img/logos/li.png" /></a>
+                <img src="~/Content/img/logos/li.png" /></a>
          
-     </li>
+        </li>
 
- </ul>
+    </ul>
         
 </section>
-
+<hr />
 <section class="contact">
     <header>
         <h3>Business Address</h3>
@@ -47,3 +51,4 @@
         USA
     </address>
 </section>
+<div class="clear"></div>
