--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                     <hr />
                     
                     <p><b>Open Source Work</b></p> 
-                    <a   target="_blank" href="https://github.com/ryanmw">http://github.com/ryanmw</a>   
+                    <a   target="_blank" href="https://github.com/cyren">http://github.com/cyren</a>   
         
                 </div>
             </aside>
