--- a/RMW.Web/Views/Articles/Display.cshtml
+++ b/RMW.Web/Views/Articles/Display.cshtml
@@ -15,15 +15,23 @@
 <hr />
 <a name="comments"></a>
 
-              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- RMW : 300x250 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:250px"
-     data-ad-client="ca-pub-5003120351442332"
-     data-ad-slot="2012639399"></ins>
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+ 
+
+
+<script type="text/javascript">
+    (function () {
+        if (window.CHITIKA === undefined) { window.CHITIKA = { 'units': [] }; };
+        var unit = { "publisher": "dasklub", "width": 300, "height": 250, "sid": "Chitika Default", "color_text": "FFFFFF", "color_bg": "000000" };
+        var placement_id = window.CHITIKA.units.length;
+        window.CHITIKA.units.push(unit);
+        document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.src = 'http://scripts.chitika.net/getads.js';
+        try { document.getElementsByTagName('head')[0].appendChild(s); } catch (e) { document.write(s.outerHTML); }
+    }());
 </script>
+
 
 @if (Model.Comments != null && Model.Comments.Count > 0)
 {
