update resume/ details

--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -101,8 +101,8 @@
                     <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
              
                     <ul>
-                        <li>ASP.NET MVC</li>
-                        <li>C#, VB.NET</li>
+                        <li>ASP.NET/ C#</li>
+                        <li>Azure</li>
                         <li>SQL Server</li>
                         <li>HTML5, CSS, JavaScript</li>
 
