--- a/RMW.Web/Views/Home/Resume.cshtml
+++ b/RMW.Web/Views/Home/Resume.cshtml
@@ -105,10 +105,8 @@
             <li><i>Software Engineer</i></li>
             <li class="uppers">Downtown San Francisco<span class="notice"> ; </span>January 2013 - Present</li>
             <li class="details">
-                Working with Windows Azure, PowerShell, C# and SQL Server to deliver applications for international E-Commerce. 
-                Developing TDD (Test Driven Development) solutions using Scrum and other Agile methodologies with continous deployment. 
-                
-
+                Working with Azure, C#, PowerShell and SQL Server to deliver applications for international E-Commerce. 
+                Developing TDD (Test Driven Development) solutions using Agile methodologies with continous delivery. 
             </li>
 
 
@@ -120,7 +118,7 @@
         <a href="http://mouthguardstore.com" target="_blank">Mouthguard Store</a>
 
         <ul>
-            <li><i>Co-founder, Web Developer, Webmaster</i></li>
+            <li><i>Lead Developer/ Webmaster/ E-Marketing</i></li>
             <li class="uppers">Telecommute <span class="notice">;</span> July 2012 - Present</li>
             <li class="details">Developed an E-Commerce solution for a variety of dental products. Integrated with PayPal checkout and set up AdWords campaign to track conversions. Project was made with ASP.NET 4.5 in C# with SQL Server 2012, NuGet Packages, jQuery, jQuery UI, Amazon S3, Windows Server 2012 and features a responsive mobile layout.  Site uses SEO best practices such as rich snippets, video SEO sitemap, on page semantics and more. 
 
