set SID for ads

--- a/RMW.Web/Views/Articles/Display.cshtml
+++ b/RMW.Web/Views/Articles/Display.cshtml
@@ -21,7 +21,7 @@
 <script type="text/javascript">
     (function () {
         if (window.CHITIKA === undefined) { window.CHITIKA = { 'units': [] }; };
-        var unit = { "publisher": "dasklub", "width": 300, "height": 250, "sid": "Chitika Default", "color_text": "FFFFFF", "color_bg": "000000" };
+        var unit = { "publisher": "dasklub", "width": 300, "height": 250, "sid": "ryanmichaelwilliams.com", "color_text": "FFFFFF", "color_bg": "000000" };
         var placement_id = window.CHITIKA.units.length;
         window.CHITIKA.units.push(unit);
         document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
