--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
  
 
           <footer class="wrapper">
-                    <p>&copy; @DateTime.Now.Year - Ryan Michael Williams | @Html.Partial("_LoginPartial") </p> 
+                    <p>&copy; @DateTime.Now.Year - Ryan Williams | @Html.Partial("_LoginPartial") </p> 
                 </footer>
     </div>
 
