shorten name display

--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -96,9 +96,9 @@
             <aside>
                 <div class="side_bg">
          
-                    <h2 class="home_title">Ryan Michael Williams</h2>
+                    <h2 class="home_title">Ryan Williams</h2>
                     <p class="no_margin"><b>Full Stack Web Developer</b></p>
-                    <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Michael Williams" title="About Ryan Michael Williams" /></a>
+                    <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Williams" title="About Ryan Williams" /></a>
              
                     <ul>
                         <li>ASP.NET/ C#</li>
