--- a/RMW.Web/Views/Articles/Display.cshtml
+++ b/RMW.Web/Views/Articles/Display.cshtml
@@ -17,20 +17,24 @@
 
  
 
+<div style="text-align:center;">
+    <script type="text/javascript">
+        amzn_assoc_ad_type = "banner";
+        amzn_assoc_marketplace = "amazon";
+        amzn_assoc_region = "US";
+        amzn_assoc_placement = "assoc_banner_placement_default";
+        amzn_assoc_banner_type = "ez";
+        amzn_assoc_p = "9";
+        amzn_assoc_width = "180";
+        amzn_assoc_height = "150";
+        amzn_assoc_tracking_id = "dkm543-20";
+        amzn_assoc_linkid = "844c47524044abfe9765d19c2ff341ad";
+    </script>
+    <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
+</div>
 
-<script type="text/javascript">
-    (function () {
-        if (window.CHITIKA === undefined) { window.CHITIKA = { 'units': [] }; };
-        var unit = { "publisher": "dasklub", "width": 300, "height": 250, "sid": "ryanmichaelwilliams.com", "color_text": "FFFFFF", "color_bg": "000000" };
-        var placement_id = window.CHITIKA.units.length;
-        window.CHITIKA.units.push(unit);
-        document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-        var s = document.createElement('script');
-        s.type = 'text/javascript';
-        s.src = 'http://scripts.chitika.net/getads.js';
-        try { document.getElementsByTagName('head')[0].appendChild(s); } catch (e) { document.write(s.outerHTML); }
-    }());
-</script>
+
+
 
 
 @if (Model.Comments != null && Model.Comments.Count > 0)
