resume/ layout updates

--- a/RMW.Web/Views/Articles/Index.cshtml
+++ b/RMW.Web/Views/Articles/Index.cshtml
@@ -3,12 +3,12 @@
 
 @{
     ViewBag.Title = "ASP.NET Web Developer Articles";
-    ViewBag.MetaDesc = "Ryan Michael Williams, professional software developer. Articles on development with ASP.NET, C# and other useful Microsoft technologies.";
+    ViewBag.MetaDesc = "Ryan Williams, professional software engineer. Articles on development with ASP.NET, C# and other useful Microsoft technologies.";
 }
 
 <h1>Articles</h1>
 
-<i>Here I document different aspects of development in the case that either I forget them or someone else wants to know them.</i>
+<i>Recent software development articles</i>
 <hr />
 <br />
 <ul class="no_item_type" style="margin:0;padding:0;">
