--- a/RMW.Web/Views/Home/Resume.cshtml
+++ b/RMW.Web/Views/Home/Resume.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Web Developer Résumé";
-    ViewBag.MetaDesc = "Resume of Web Developer Ryan Michael Williams. ";
+    ViewBag.MetaDesc = "Resume of Web Developer Ryan Williams. ";
 }
 
 <h1>Résumé</h1>
@@ -9,218 +9,22 @@
 <a href="~/content/docs/rmw_resume_2013-08-05.pdf" target="_blank">Download PDF Version</a>*@
 
 <hr />
-<h2>Ryan Michael Williams</h2>
-<i>Full Stack Web Developer</i>
+<h2>Download the résumé of Ryan Williams</h2> 
+<h4>Last Updated: April 27th, 2017</h4>
 <p>
-    I have been making websites professionally for @(DateTime.UtcNow.Year - 2008)  years. I'm currently interested in developing responsive designs through an MVC architecture with 
-    continuous deployment, embracing
-    the latest innovations with HTML5, CSS3 and releated technologies. I enjoy working with a motivated team and also independently. 
-</p>
-<p><b>Technologies</b></p>
-
-<div class="list_set">
-    <ul class="on_line_points">
-        <li><a href="http://en.wikipedia.org/wiki/ASP.NET" target="_blank">ASP.NET</a></li>
-        <li><a href="http://en.wikipedia.org/wiki/ASP.NET_MVC" target="_blank">ASP.NET MVC</a></li>
-        <li><a href="http://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank">C#</a></li>
-        <li><a href="http://en.wikipedia.org/wiki/Visual_Basic_.NET" target="_blank">VB.NET</a>
-        </li>
-        <li><a href="http://en.wikipedia.org/wiki/ADO.NET_Entity_Framework" target="_blank">Entity Framework</a>
-        </li>
+    <ul>
+        
         <li>
-            <a href="http://en.wikipedia.org/wiki/T-SQL" target="_blank">T-SQL</a>
+            <a href="~/Content/docs/resume_ryan-williams_2017-04-27.pdf">Adobe PDF</a>
         </li>
-
+        <li><a href="~/Content/docs/resume_ryan-williams_2017-04-27.doc">Microsoft Word</a></li>
     </ul>
-</div>
-<div class="list_set">
-    <ul class="on_line_points">
-
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a>
-        </li>
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Jquery" target="_blank">jQuery</a>
-        </li>
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Css" target="_blank">CSS</a>
-        </li>
-        <li>
-            <a href="http://en.wikipedia.org/wiki/HTML5" target="_blank">HTML5</a>
-        </li>
-        <li><a href="http://en.wikipedia.org/wiki/Powershell" target="_blank">PowerShell</a>
-        </li>
-
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Visual_Studio_2012#Visual_Studio_2012" target="_blank">Visual Studio 2012</a>
-        </li>
-
-    </ul>
-</div>
-
-<div class="list_set">
-    <ul class="on_line_points">
-
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/SQL_Server_2012#SQL_Server_2012" target="_blank">SQL Server 2012</a>
-        </li>
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Windows_Server_2012" target="_blank">Windows Server 2012</a>
-
-        </li>
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Photoshop" target="_blank">Adobe Photoshop</a>
-
-        </li>
-
-        <li>
-            <a href="http://en.wikipedia.org/wiki/Adobe_Premiere" target="_blank">Adobe Premiere</a>
-
-        </li>
-
-        <li><a href="http://en.wikipedia.org/wiki/Mercurial" target="_blank">Mercurial</a>
-        </li>
-
-        <li><a href="http://en.wikipedia.org/wiki/Teamcity" target="_blank">TeamCity</a>
-        </li>
-    </ul>
-</div>
-
-<div class="clear"></div>
-<p>
-    <b>Recent Experience</b>
-
 </p>
 
-<ul class="sub_nodeless">
-        <li class="main_node">
-        <a href="http://rakuten.com" target="_blank">Rakuten</a>
-
-        <ul>
-            <li><i>Software Engineer</i></li>
-            <li class="uppers">Downtown San Francisco<span class="notice"> ; </span>January 2013 - Present</li>
-            <li class="details">
-                Working with Azure, C#, PowerShell and SQL Server to deliver applications for international E-Commerce. 
-                Developing TDD (Test Driven Development) solutions using Agile methodologies with continous delivery. 
-            </li>
 
 
-        </ul>
+<br /><br /><br /><br /><br /><br />
 
-    </li>
+<br /><br /><br /><br /><br /><br />
 
-    <li class="main_node">
-        <a href="http://mouthguardstore.com" target="_blank">Mouthguard Store</a>
-
-        <ul>
-            <li><i>Lead Developer/ Webmaster/ E-Marketing</i></li>
-            <li class="uppers">Telecommute <span class="notice">;</span> July 2012 - Present</li>
-            <li class="details">Developed an E-Commerce solution for a variety of dental products. Integrated with PayPal checkout and set up AdWords campaign to track conversions. Project was made with ASP.NET 4.5 in C# with SQL Server 2012, NuGet Packages, jQuery, jQuery UI, Amazon S3, Windows Server 2012 and features a responsive mobile layout.  Site uses SEO best practices such as rich snippets, video SEO sitemap, on page semantics and more. 
-
-            </li>
-
-
-        </ul>
-
-    </li>
-
-    <li class="main_node"><a target="_blank" href="http://www.lyntonweb.com/">Lynton Web</a>/ <a href="http://www.nestle.com" target="_blank">Nestlé</a>
-        <ul>
-            <li><i>Technical Lead Developer</i></li>
-            <li class="uppers">Telecommute <span class="notice">;</span>  January 2012 - August 2012 (Contract)</li>
-            <li class="details">Worked on a team with a total of 3 developers to build an intranet site that allows users in various roles to upload and evaluate videos and PDFs. Project was 100% telecommute and utilized Team City, Mercurial, Fluent Nhibernate, ASP.NET 4.0, SQL Server 2008 and C#. Content was stored in an Amazon S3 bucket with a server virtually hosted also in Amazon. Site was fully localized into 3 languages. Given the short term of the contract, was responsible for seeing the project through to completion as other developers left near the end.
-            </li>
-        </ul>
-
-    </li>
-
-
-
-    <li class="main_node"><a target="_blank" href="http://www.jarmedia.com/">JAR Media</a>
-        <ul>
-            <li><i>Software Engineer</i></li>
-            <li class="uppers">San Francisco, California <span class="notice">;</span>  June 2009 - September 2011</li>
-            <li class="details">Start up company where I worked with company members and developer partners to understand business objectives and independently build a custom CMS template engine for creating high traffic 
-                webpages aimed at lead generation and credit card sales for the affiliate marketing industry. Integration with a large array of credit card processing APIs 
-                which successfully charged in excess of 700,000 transactions, captured over 3.5 million leads and generated over 300,000 customers. Automated programs for processing 
-                customer records, real-time lead posting to external partners and secure batch credit card processing. The application primarily utilized ASP.NET Web Forms
-                 in C# and Windows Services on a load balanced Windows 2008 R2 web farm. In addition to the programming, was also involved in media buying campaigns and 
-                system maintenance. Received large bonuses for outstanding results.
-
-            </li>
-        </ul>
-
-    </li>
-
-
-
-
-
-
-
-
-    <li class="main_node"><a target="_blank" href="http://www.ptghome.com/">Pioneer Technology Group</a>
-        <ul>
-            <li><i>Web Developer</i></li>
-            <li class="uppers">Sanford, FL <span class="notice">;</span>  August 2008 - February 2009</li>
-            <li class="details">Built a web application in ASP.NET Visual Basic for the real estate industry with the capabilities of
-importing records, indexing documents, managing customers, themes, permissions, e-mailing, user
-document uploading and marketing list generation from data imported and collected in SQL Server.
-Additionally, I worked on feature and defect requests for an online tourist tax development application.
-
-            </li>
-        </ul>
-
-    </li>
-
-
-
-
-
-    <li class="main_node"><a target="_blank" href="http://www.redweek.com/timeshare-companies/celebrity-resorts">Celebrity Resorts</a>
-        <ul>
-            <li><i>Software Developer I</i></li>
-            <li class="uppers">Orlando, FL <span class="notice">;</span>  April 2008 – July 2008</li>
-            <li class="details">Consulted with high ranking company members, configured and deployed SharePoint 2007 (MOSS)
-intranet to replace existing intranet. Deployed a variety of MOSS features for hundreds users. Coded
-ASP.NET Visual Basic applications for internal use; converted some from PHP. Integrated company
-wide Active Directory with SharePoint.
-            </li>
-        </ul>
-
-    </li>
-
-
-
-
- 
-
-
-
-
-
-
-
-</ul>
-
-
-
-<p>
-    <b>Education</b>
-</p>
-<ul style="margin: 0; padding: 0;">
-
-    <li class="no_item_type">University of Central Florida (2007)
-        <ul>
-            <li>BSBA: Management Information Systems
-            </li>
-            <li>BSBA: Marketing</li>
-        </ul>
-    </li>
-
-</ul>
+<br /><br /><br /><br /><br /><br />
