--- a/RMW.Web/Views/Home/Contact.cshtml
+++ b/RMW.Web/Views/Home/Contact.cshtml
@@ -1,18 +1,18 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
- <h1>Contact</h1>
+ <h1>@ViewBag.Title</h1>
  
 <section class="contact">
     <header>
-        <h3>Email</h3>
+        <h3>Business Email</h3>
     </header>
 
   
 
     <p>
        
-        <span><a href="mailto:ryanmichaelwilliams@gmail.com">ryanmichaelwilliams&#64;<wbr>gmail<wbr>.com</a></span>
+        <span><a href="mailto:admin@bootbaron.com">admin&#64;<wbr>bootbaron<wbr>.com</a></span>
     
     </p>
 
@@ -28,12 +28,12 @@
         <li>
             <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">
                 <img src="~/Content/img/logos/gplus-64.png" /> </a>
-            <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">Ryan Williams</a>
+            <a class="h_img" href="https://plus.google.com/u/0/102203432508719579575?rel=author" target="_blank">Ryan Williams</a> (Google Plus)
         </li>
 
         <li>
             <a class="h_img" href="http://www.linkedin.com/in/ryanmichaelwilliams" target="_blank">
-                <img src="~/Content/img/logos/li.png" /></a>
+                <img src="~/Content/img/logos/li.png" />Linked In</a>
          
         </li>
 
@@ -41,14 +41,4 @@
         
 </section>
 <hr />
-<section class="contact">
-    <header>
-        <h3>Business Address</h3>
-    </header>
-    <address>Ryan Williams<br />
-        1592 Union Street #208<br />
-        San Francisco, CA 94123<br />
-        USA
-    </address>
-</section>
-<div class="clear"></div>
+ <br /><br /><br /><br /><br /><br />
