--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="google-site-verification" content="7BYPNC1VNRmI40PVCvMt8GLJCSHgXBnfjYErBzLWwnc" />
-    <title>RMW | @ViewBag.Title</title>
+    <title>RW | @ViewBag.Title</title>
     <meta name="description" content="@ViewBag.MetaDesc">
     <meta name="viewport" content="width=device-width">
      <link rel="icon" href="~/content/img/favicon.ico" type='image/x-icon' />
@@ -28,7 +28,7 @@
         <header class="wrapper clearfix">
         
             <h1 class="title">
-                <a href="~/" >RMW</a> </h1>
+                <a href="~/" >RW</a> </h1>
             <nav>
                 <ul>
              
@@ -97,7 +97,7 @@
                 <div class="side_bg">
          
                     <h2 class="home_title">Ryan Williams</h2>
-                    <p class="no_margin"><b>Full Stack Web Developer</b></p>
+                    <p class="no_margin"><b>Software Engineer</b></p>
                     <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Williams" title="About Ryan Williams" /></a>
              
                     <ul>
