--- a/RMW.Web/Views/Home/Resume.cshtml
+++ b/RMW.Web/Views/Home/Resume.cshtml
@@ -1,13 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Web Developer Résumé";
+    ViewBag.Title = "Résumé";
     ViewBag.MetaDesc = "Resume of Web Developer Ryan Williams. ";
 }
 
-<h1>Résumé</h1>
-@*
-<img src="~/Content/img/logos/pdf.png" alt="pdf" />
-<a href="~/content/docs/rmw_resume_2013-08-05.pdf" target="_blank">Download PDF Version</a>*@
-
+<h1>@ViewBag.Title</h1>
+ 
 <hr />
 <h2>Download the résumé of Ryan Williams</h2> 
 <h4>Last Updated: April 27th, 2017</h4>
