--- a/RMW.Web/Views/Home/Resume.cshtml
+++ b/RMW.Web/Views/Home/Resume.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Résumé";
-    ViewBag.MetaDesc = "Resume of Web Developer Ryan Williams. ";
+    ViewBag.MetaDesc = "Resume of Software Engineer Ryan Williams. ";
 }
 
 <h1>@ViewBag.Title</h1>
