allow change password

--- a/RMW.Web/Views/Shared/_LoginPartial.cshtml
+++ b/RMW.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,9 @@
     <text>
  
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a> | 
-<a href="~/articles/admin">Admin Articles</a>
+<a href="~/articles/admin">Admin Articles</a> |
+<a href="~/account/manage">Change Password</a>
+
         
     </text>
 } else {
