--- a/RMW.Web/Views/Shared/_LoginPartial.cshtml
+++ b/RMW.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
  
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a> | 
+
+            <a href="~/account/logoff">Log off</a> | 
 <a href="~/articles/admin">Admin Articles</a> |
 <a href="~/account/manage">Change Password</a>
 
