change page title

--- a/RMW.Web/Views/Articles/Index.cshtml
+++ b/RMW.Web/Views/Articles/Index.cshtml
@@ -2,7 +2,7 @@
     @model  PagedResult<Article>
 
 @{
-    ViewBag.Title = "ASP.NET Articles";
+    ViewBag.Title = "Ryan Williams - .NET Software Engineer";
     ViewBag.MetaDesc = "Ryan Williams, professional software engineer. Articles on development with ASP.NET, C# and other useful Microsoft technologies.";
 }
 
