--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="google-site-verification" content="7BYPNC1VNRmI40PVCvMt8GLJCSHgXBnfjYErBzLWwnc" />
+    <meta name="google-site-verification" content="2gJdT5_ahFJOwUV87v3QUaQN6l0AEgjXMxXRkY5DJ24" />
     <title>RW | @ViewBag.Title</title>
     <meta name="description" content="@ViewBag.MetaDesc">
     <meta name="viewport" content="width=device-width">
@@ -157,19 +157,18 @@
     </div>
      
 
-    <script type="text/javascript">
+    <script>
+                        (function (i, s, o, g, r, a, m) {
+                        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                            (i[r].q = i[r].q || []).push(arguments)
+                        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-1180027-2']);
-        _gaq.push(['_trackPageview']);
+                        ga('create', 'UA-1180027-9', 'auto');
+                        ga('send', 'pageview');
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-</script>
+    </script>
 
 
        @RenderSection("scripts", required: false)
