don't link in self-image

--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
          
                     <h2 class="home_title">Ryan Williams</h2>
                     <p class="no_margin"><b>Software Engineer</b></p>
-                    <a href="~/home/resume" class="h_img"><img src="~/content/img/me.jpg" alt="About Ryan Williams" title="About Ryan Williams" /></a>
+                    <img src="~/content/img/me.jpg" alt="About Ryan Williams" title="About Ryan Williams" />
              
                     <ul>
                         <li>ASP.NET/ C#</li>
